@@ -1324,6 +1324,13 @@
                 </md>So the matrices <m>\alpha(AB)</m> and <m>A(\alpha B)</m> are equal, entry-by-entry, and by the definition of matrix equality (<xref ref="definition-ME" acro="ME"/>) we can say they are equal matrices.</p> \
             </solution>
         </exercise>
+        <exercise number="T28" xml:id="exercise-MM-T28">
+            <statement>
+                <p>Suppose that <m>A</m> and <m>B</m> are both upper triangular matrices (<xref ref="definition-UTM"/>) of size <m>n</m>.  Use <xref ref="theorem-EMP"/> to prove that each diagonal entry of the matrix product <m>AB</m> is the scalar product of the individual entries on the diagonal of each matrix.  More precisely, show that
+                <me>\matrixentry{AB}{ii}=\matrixentry{A}{ii}\matrixentry{B}{ii},\quad 1\leq i\leq n</me>.
+                Note: the matrix product is only this simple for the <em>diagonal</em> entries, and only for the special case of <em>triangular</em> matrices!</p>
+            </statement>
+        </exercise>
         <exercise number="T31" xml:id="exercise-MM-T31">
             <statement>
                 <p>Suppose that <m>A</m> is an <m>m\times n</m> matrix and <m>\vect{x},\,\vect{y}\in\nsp{A}</m>.  Prove that <m>\vect{x}+\vect{y}\in\nsp{A}</m>.</p>
