@@ -38,7 +38,7 @@ to illustrate.  Move Theorem PTMT about the product of
 triangular matrices moves from Section OD to Section MM.
 Move Theorem ITMT about inverses of triangular matrices
 from Section OD to Section MINM, and improve the proof.
-New exercises: MO.T10, MO.T25
+New exercises: MO.T10, MO.T25, MM.T28
 
 v X.XX
 ~~~~~~~~~~~~~~~~
@@ -55,6 +55,7 @@ New: Theorem NTM, nonsingular triangular matrices
 New: Example NSTM, nonsingular triangular matrices
 New: Exercise MO.T10, both upper and lower triangular
 New: Exercise MO.T25, transpose of triangular matrix
+New: Exercise MM.T28, diagonal of triangular matrix product
 New: Example UE, unknown eigenvalues
 Edit: Theorem TSS, added "an" in the proof (Rachel Chaiser)
 Edit: Theorem EDYES, substantially shorten proof
